clang/test/BSC/Negative/Generic/StructAndFunction/call_undeclared_generic_function1/call_undeclared_generic_function1.cbs
// RUN: %clang_cc1 -verify %s

int main() {
  bar<int>(10); // expected-error{{use of undeclared identifier 'bar'}}
  return 0;
}